[gd_scene load_steps=5 format=3 uid="uid://dy7k5vqh1qk3j"]

[ext_resource type="Script" uid="uid://dvulcrvukihs4" path="res://scripts/equipment/mixing_bowl.gd" id="1_mixing"]
[ext_resource type="PackedScene" uid="uid://d654edtp7yig" path="res://assets/enviroment/Mixer_Mania_1109143241_texture.glb" id="2_model"]
[ext_resource type="PackedScene" path="res://scenes/ui/interact_prompt.tscn" id="3_prompt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_interaction"]
radius = 2.5

[sub_resource type="ViewportTexture" id="ViewportTexture_progress"]
viewport_path = NodePath("ProgressBarContainer/SubViewport")

[node name="MixingBowl" type="Node3D" groups=["equipment"]]
script = ExtResource("1_mixing")

[node name="MixerModel" parent="." instance=ExtResource("2_model")]

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_interaction")

[node name="InteractPrompt" parent="." instance=ExtResource("3_prompt")]
visible = false

[node name="ProgressBarContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[node name="SubViewport" type="SubViewport" parent="ProgressBarContainer"]
transparent_bg = true
size = Vector2i(300, 40)

[node name="ProgressBar" type="ProgressBar" parent="ProgressBarContainer/SubViewport"]
offset_right = 300.0
offset_bottom = 40.0
value = 50.0
show_percentage = false

[node name="Sprite3D" type="Sprite3D" parent="ProgressBarContainer"]
billboard = 1
texture_filter = 0
texture = SubResource("ViewportTexture_progress")
